perl6-idea-plugin/testData/highlight/User.rakumod
use Base;

sub <weak_warning descr="Unused subroutine">foo</weak_warning> {}
class <error descr="Re-declaration of C from Base.rakumod:3">C</error> {}
